--- a/res/layout/shake_float.xml
+++ b/res/layout/shake_float.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/float_dialog"
-    android:layout_width="280dp"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:background="@drawable/confirm_dialog_bg2"
     android:gravity="center_horizontal"
@@ -15,21 +15,15 @@
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="30dp"
-            android:paddingTop="20dp"
-            android:src="@drawable/find_more_friend_shake" />
 
         <TextView
+            android:id="@+id/shake_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
-            
-            android:paddingTop="20dp"
-            android:text="世  界  之  最"
+            android:gravity="center"            
+            android:paddingTop="10dp"
+            android:text="弹出框头部"
             android:textColor="#FF0000"
             android:textSize="20sp" />
     </LinearLayout>
@@ -41,17 +35,17 @@
         android:layout_below="@id/float_title"
         android:gravity="center"
         android:layout_margin="5dp"
-        android:padding="10dp"
-        android:textSize="20sp"
-        android:text="ddddddddddddddddddddddddddddddddddddddddddd"
+        android:paddingBottom="20dp"
+        android:textSize="25sp"
+        android:text="无信息"
         android:textColor="#000" />
 
     <Button
         android:id="@+id/onemore"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_style_green"
-        android:gravity="center"
+        android:gravity="center"        
         android:onClick=""
         android:text="再试一次"
         android:textColor="#fff"
