--- a/res/layout/regist.xml
+++ b/res/layout/regist.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:id="@+id/login_top_layout"
+        android:id="@+id/regist_top_layout"
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:background="@drawable/title_bar" >
 
         <Button
-            android:id="@+id/login_reback_btn"
+            android:id="@+id/regist_reback_btn"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="登录"
+            android:text="注册界面"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -36,83 +36,98 @@
     <!-- layout_below 将控件置于给定ID控件之下(在某元素的下方) -->
 
     <cn.nsx.yaoyiyao.util.ClearEditText
-        android:id="@+id/login_user_edit"
+        android:id="@+id/regist_user_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_top_layout"
+        android:layout_below="@+id/regist_top_layout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/login_editbox"
         android:drawableLeft="@drawable/icon_user"
         android:drawableRight="@drawable/delete_selector"
-        android:hint="QQ号/微信号/（默认admin）"
+        android:focusable="true"
+        android:hint="用户名"
         android:singleLine="true"
         android:textColor="#000"
         android:textSize="15sp" />
 
     <cn.nsx.yaoyiyao.util.ClearEditText
-        android:id="@+id/login_passwd_edit"
+        android:id="@+id/regist_passwd_edit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_user_edit"
+        android:layout_below="@+id/regist_user_edit"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/login_editbox"
         android:drawableLeft="@drawable/account_icon"
         android:drawableRight="@drawable/delete_selector"
-        android:hint="请输入密码(123)"
+        android:hint="密码"
+        android:password="true"
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textSize="15sp" />
+
+    <cn.nsx.yaoyiyao.util.ClearEditText
+        android:id="@+id/regist_passwd_confirm"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/regist_passwd_edit"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_editbox"
+        android:drawableLeft="@drawable/account_icon"
+        android:drawableRight="@drawable/delete_selector"
+        android:hint="再次输入密码"
+        android:password="true"
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textSize="15sp" />
+    
+    <cn.nsx.yaoyiyao.util.ClearEditText
+        android:id="@+id/regist_email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/regist_passwd_confirm"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_editbox"
+        android:drawableLeft="@drawable/account_icon"
+        android:drawableRight="@drawable/delete_selector"
+        android:hint="邮箱地址（可不填）"
         android:password="true"
         android:singleLine="true"
         android:textColor="#000"
         android:textSize="15sp" />
 
     <RelativeLayout
-        android:id="@+id/login_passwd_remember"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_passwd_edit"
-        android:layout_marginTop="10dp" >
-
-        <CheckBox
-            android:id="@+id/rememberPW"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_alignParentLeft="true"
-            android:text="记住密码"
-            android:textColor="#00f"
-            android:textSize="16sp" >
-        </CheckBox>
-
-        <CheckBox
-            android:id="@+id/autoLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
-            android:layout_alignParentRight="true"
-            android:text="自动登录"
-            android:textColor="#00f"
-            android:textSize="16sp" >
-        </CheckBox>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_passwd_remember"
+        android:layout_below="@+id/regist_email"
         android:layout_marginTop="20dp" >
 
         <Button
-            android:id="@+id/login_login_btn"
+            android:id="@+id/clearBtn"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="40dp"
+            android:background="@drawable/btn_style_green"
+            android:text="重置"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/registBtn"
             android:layout_width="90dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/btn_style_green"
-            android:onClick="LoginMain"
-            android:text="登录"
+            android:text="注册"
             android:textColor="#ffffff"
             android:textSize="18sp" />
     </RelativeLayout>
