--- a/res/layout/main_tab_res.xml
+++ b/res/layout/main_tab_res.xml
@@ -4,51 +4,54 @@
     android:layout_height="fill_parent"
     android:background="#eee"
     android:orientation="vertical" >
-        
-        <RelativeLayout
-  			android:layout_width="fill_parent"
-  			android:layout_height="45dp"
-  			android:id="@+id/title" 
-  			android:background="@drawable/title_bar"
-  			android:gravity="center_vertical"  >  
-      		<TextView
-        		android:layout_width="wrap_content" 
-        		android:layout_height="wrap_content" 
-        		android:text="选饭点"
-        		android:layout_centerInParent="true"
-        		android:textSize="20sp"		
-				android:textColor="#ffffff" /> 
-			<Button
-			    android:id="@+id/myposition" 
-			    android:layout_width="87dp" 
-        		android:layout_height="wrap_content"
-        		android:layout_alignParentRight="true" 
-        		android:layout_centerVertical="true"
-        		android:layout_marginRight="5dp"
-        		android:text="我的位置"
-        		android:textColor="#fff"
-        		android:textSize="15dp"
-				android:background="@drawable/title_btn_right"
-			    />			       
-		</RelativeLayout>
-		
-        <RelativeLayout 
-            android:layout_width="fill_parent"
-  			android:layout_height="fill_parent"
-  			android:id="@+id/title" 
-  			android:background="@drawable/title_bar"
-  			android:gravity="center_vertical"
-  			android:onClick="btn_shake4">
+
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/title_bar"
+        android:gravity="center_vertical" >
+
         <TextView
-			    android:id="@+id/chooseRes"
-        		android:layout_width="wrap_content" 
-        		android:layout_height="wrap_content" 
-        		android:text="吃饭时间，点击屏幕~~\n选择随机的饭馆..."
-        		android:layout_centerInParent="true"
-        		android:layout_alignParentBottom="true"
-        		android:gravity="center"
-        		android:textSize="20sp"		
-				android:textColor="#ffffff" />
-			
-		</RelativeLayout>
- </LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="选饭点"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/myposition"
+            android:layout_width="87dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/title_btn_right"
+            android:text="我的位置"
+            android:onClick="MyLocationBtn"
+            android:textColor="#fff"
+            android:textSize="15dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/title_bar"
+        android:gravity="center_vertical"
+        android:onClick="btn_shake4" >
+
+        <TextView
+            android:id="@+id/chooseRes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="吃饭时间，点击屏幕~~\n选择随机的饭馆..."
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+    </RelativeLayout>
+
+</LinearLayout>
