--- a/res/layout/main_top_right_dialog.xml
+++ b/res/layout/main_top_right_dialog.xml
@@ -22,7 +22,9 @@
 
     		<LinearLayout
     		    android:layout_width="match_parent"
-    		    android:layout_height="wrap_content" >
+    		    android:layout_height="wrap_content"
+    		    android:clickable="true"
+    		    android:onClick="chat" >
 
     			<ImageView
     			    android:id="@+id/imageView1"
